--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ body{
 }
 #root:after{
   position: absolute;
-  opacity: 0.6;
+  opacity: 0.2;
   background-size: 16px 16px;
   background-color: #f8fcff;
 background-image:  repeating-linear-gradient(0deg, #000000, #000000 0.7000000000000001px, #f8fcff 0.7000000000000001px, #f8fcff);
@@ -421,8 +421,8 @@ h1{
   background-color: #e7e7e7;
   border: solid 2px #000000;
   border-radius: 20px;
-  margin: 10px;
   transition: all 0.3s;
+  margin: 5px;
   cursor: pointer;
   overflow: hidden;
 }
@@ -435,6 +435,8 @@ h1{
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin: 5px;
+  margin-top: 30px; 
   max-width: 1000px; 
 }
 .controls{
